# headtailAnalyzer

./: .gitignore  README.md  setup.sh
config/: cut.json
source/: CMakeLists.txt  eventSelector.cpp  headtailAnalyzer.cpp  slopeVisualizer.cpp
